--- a/src/app/hero-edit-detail/hero-edit-detail.component.html
+++ b/src/app/hero-edit-detail/hero-edit-detail.component.html
@@ -26,7 +26,8 @@
         </div>
         <div class="col-12">
           <b class="card-descriptor">Description</b>
-          <div class="card-desc"><textarea type="text"rows=3 [(ngModel)]="hero.desc"></textarea>
+          <div class="card-desc">
+            <textarea type="text"rows=3 [(ngModel)]="hero.desc"></textarea>
         </div>
       </div>
     </div> 
