--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,5 +1,10 @@
 <div class="container text-center">
   <app-search-bar [(search)]="search"></app-search-bar>
+  <a routerLink="/edit/hero">
+    <button type="button" class="btn btn-outline-danger card-action-btn">
+      Create New Hero
+    </button>
+  </a>
   <div class="row text-center">
     <div 
       *ngFor="let hero of heroes | searchFilter : search.value" 
